# GichanExcel

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app.py  index.html  package-lock.json  package.json  run.bat  vite.config.ts
.github/workflows/: release.yml
patches/: @mertdeveci55+univer-import-export+0.2.1.patch  @univerjs+sheets+0.25.1.patch  @univerjs+sheets-ui+0.25.1.patch  @univerjs+ui+0.25.1.patch
src/: App.css  App.tsx  setup-univer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src/components/: SpreadsheetApp.tsx  UnsavedChangesDialog.tsx  UpdateDialog.tsx  icons.tsx
src/lib/: autosave.ts  create-univer.ts  files.ts  ooxml-styles.ts  row-auto-height.ts  text-to-columns.ts  update-checker.ts  version.ts  workbook-constants.ts  xlsx-export.ts  xlsx-import.ts
src/plugins/text-split/: command.ts  constants.ts  index.ts  menu.ts  plugin.ts  schema.ts
