[package]
name = "gichan-excel"
version = "1.0.3"
description = "기찬엑셀 - 가벼운 스프레드시트"
authors = ["Bae Gichan"]
edition = "2021"

[lib]
name = "gichan_excel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
